# crandata

./: Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: default.md  simple.md
.github/actions/bump-version-tag/: action.yml
.github/actions/configure-org-repo-authorization/: action.yml
.github/actions/source-code-version-get/: action.yml
.github/actions/source-code-version-update/: action.yml
.github/workflows/: build.yml  bump_version.yml  python-package-workflow.yml  release.yml
crandata/: __init__.py  _anndatamodule.py  _dataloader.py  _dataset.py  _genome.py  _module.py  _seq_array.py  chrom_io.py  crandata.py  crandata_basic.py  desc.txt  seq_io.py  untitled.txt  utils.py
tests/: temporary_file.h5  test_crandata_fields.py  test_crandata_units.py  test_crandataloader.ipynb  test_integration.py  test_yanndata_fields.py  test_yanndataloader.ipynb  testout.txt  tests to run.txt
